--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <script src="js/beam-analysis.js"></script>
     <script src="js/analysis-plotter.js"></script>
     <script
-        src="chart.js">
+        src="https://cdn.jsdelivr.net/npm/chart.js">
     </script>
     <script>
         function floatVal(id) {
